assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 148 conflicts: 9 shift/reduce
State 162 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error ';'

    5 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    7      | CLASS error ';' class

    8 dummy_feature_list: %empty
    9                   | dummy_feature_list feature
   10                   | dummy_feature_list error ';'

   11 feature: OBJECTID formals ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expr ';'

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 formals: '(' ')'
   18        | '(' formal_list ')'
   19        | '(' error ')'

   20 let: OBJECTID ':' TYPEID IN expr
   21    | OBJECTID ':' TYPEID ASSIGN expr IN expr
   22    | OBJECTID ':' TYPEID ',' let
   23    | OBJECTID ':' TYPEID ASSIGN expr ',' let
   24    | error ',' let

   25 branch: OBJECTID ':' TYPEID DARROW expr ';'

   26 branch_list: branch
   27            | branch_list branch

   28 expr_list_1: expr
   29            | expr_list_1 ',' expr

   30 expr_list_2: expr ';'
   31            | expr_list_2 expr ';'
   32            | expr_list_2 error ';'

   33 expr: OBJECTID ASSIGN expr
   34     | expr '@' TYPEID '.' OBJECTID '(' expr_list_1 ')'
   35     | expr '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr '.' OBJECTID '(' expr_list_1 ')'
   37     | expr '.' OBJECTID '(' ')'
   38     | OBJECTID '(' expr_list_1 ')'
   39     | OBJECTID '(' ')'
   40     | IF expr THEN expr ELSE expr FI
   41     | WHILE expr LOOP expr POOL
   42     | '{' expr_list_2 '}'
   43     | LET let
   44     | CASE expr OF branch_list ESAC
   45     | NEW TYPEID
   46     | ISVOID expr
   47     | expr '+' expr
   48     | expr '-' expr
   49     | expr '*' expr
   50     | expr '/' expr
   51     | '~' expr
   52     | expr '<' expr
   53     | expr LE expr
   54     | expr '=' expr
   55     | NOT expr
   56     | '(' expr ')'
   57     | OBJECTID
   58     | INT_CONST
   59     | STR_CONST
   60     | BOOL_CONST
   61     | '{' stmt_list '}'

   62 stmt_list: error ';'
   63          | stmt_list error ';'
   64          | stmt_list OBJECTID '(' ')' error ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17 18 19 34 35 36 37 38 39 56 64
    ')' (41) 17 18 19 34 35 36 37 38 39 56 64
    '*' (42) 49
    '+' (43) 47
    ',' (44) 15 22 23 24 29
    '-' (45) 48
    '.' (46) 34 35 36 37
    '/' (47) 50
    ':' (58) 11 12 13 16 20 21 22 23 25
    ';' (59) 4 5 6 7 10 11 12 13 25 30 31 32 62 63 64
    '<' (60) 52
    '=' (61) 54
    '@' (64) 34 35
    '{' (123) 5 6 11 42 61
    '}' (125) 5 6 11 42 61
    '~' (126) 51
    error (256) 4 7 10 19 24 32 62 63 64
    CLASS (258) 5 6 7
    ELSE (259) 40
    FI (260) 40
    IF (261) 40
    IN (262) 20 21
    INHERITS (263) 6
    LET (264) 43
    LOOP (265) 41
    POOL (266) 41
    THEN (267) 40
    WHILE (268) 41
    CASE (269) 44
    ESAC (270) 44
    OF (271) 44
    DARROW (272) 25
    NEW (273) 45
    ISVOID (274) 46
    STR_CONST <symbol> (275) 59
    INT_CONST <symbol> (276) 58
    BOOL_CONST <boolean> (277) 60
    TYPEID <symbol> (278) 5 6 11 12 13 16 20 21 22 23 25 34 35 45
    OBJECTID <symbol> (279) 11 12 13 16 20 21 22 23 25 33 34 35 36 37 38 39 57 64
    ASSIGN (280) 13 21 23 33
    NOT (281) 55
    LE (282) 53
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3 4
    class <class_> (48)
        on left: 5 6 7
        on right: 2 3 7
    dummy_feature_list <features> (49)
        on left: 8 9 10
        on right: 5 6 9 10
    feature <feature> (50)
        on left: 11 12 13
        on right: 9
    formal_list <formals> (51)
        on left: 14 15
        on right: 15 18
    formal <formal> (52)
        on left: 16
        on right: 14 15
    formals <formals> (53)
        on left: 17 18 19
        on right: 11
    let <expression> (54)
        on left: 20 21 22 23 24
        on right: 22 23 24 43
    branch <case_> (55)
        on left: 25
        on right: 26 27
    branch_list <cases> (56)
        on left: 26 27
        on right: 27 44
    expr_list_1 <expressions> (57)
        on left: 28 29
        on right: 29 34 36 38
    expr_list_2 <expressions> (58)
        on left: 30 31 32
        on right: 31 32 42
    expr <expression> (59)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 11 13 20 21 23 25 28 29 30 31 33 34 35 36 37 40 41 44 46 47 48 49 50 51 52 53 54 55 56
    stmt_list <expressions> (60)
        on left: 62 63 64
        on right: 61 63 64


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    5 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    7      | CLASS . error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class
    4           | class_list . error ';'

    error  shift, and go to state 8
    CLASS  shift, and go to state 1

    $end  reduce using rule 1 (program)

    class  go to state 9


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    7 class: CLASS error . ';' class

    ';'  shift, and go to state 10


State 6

    5 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 7

    0 $accept: program $end .

    $default  accept


State 8

    4 class_list: class_list error . ';'

    ';'  shift, and go to state 13


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    7 class: CLASS error ';' . class

    CLASS  shift, and go to state 1

    class  go to state 14


State 11

    6 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 15


State 12

    5 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    $default  reduce using rule 8 (dummy_feature_list)

    dummy_feature_list  go to state 16


State 13

    4 class_list: class_list error ';' .

    $default  reduce using rule 4 (class_list)


State 14

    7 class: CLASS error ';' class .

    $default  reduce using rule 7 (class)


State 15

    6 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 17


State 16

    5 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . feature
   10                   | dummy_feature_list . error ';'

    error     shift, and go to state 18
    OBJECTID  shift, and go to state 19
    '}'       shift, and go to state 20

    feature  go to state 21


State 17

    6 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    $default  reduce using rule 8 (dummy_feature_list)

    dummy_feature_list  go to state 22


State 18

   10 dummy_feature_list: dummy_feature_list error . ';'

    ';'  shift, and go to state 23


State 19

   11 feature: OBJECTID . formals ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    ':'  shift, and go to state 24
    '('  shift, and go to state 25

    formals  go to state 26


State 20

    5 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 27


State 21

    9 dummy_feature_list: dummy_feature_list feature .

    $default  reduce using rule 9 (dummy_feature_list)


State 22

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . feature
   10                   | dummy_feature_list . error ';'

    error     shift, and go to state 18
    OBJECTID  shift, and go to state 19
    '}'       shift, and go to state 28

    feature  go to state 21


State 23

   10 dummy_feature_list: dummy_feature_list error ';' .

    $default  reduce using rule 10 (dummy_feature_list)


State 24

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 29


State 25

   17 formals: '(' . ')'
   18        | '(' . formal_list ')'
   19        | '(' . error ')'

    error     shift, and go to state 30
    OBJECTID  shift, and go to state 31
    ')'       shift, and go to state 32

    formal_list  go to state 33
    formal       go to state 34


State 26

   11 feature: OBJECTID formals . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 35


State 27

    5 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 28

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 36


State 29

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 37
    ';'     shift, and go to state 38


State 30

   19 formals: '(' error . ')'

    ')'  shift, and go to state 39


State 31

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 40


State 32

   17 formals: '(' ')' .

    $default  reduce using rule 17 (formals)


State 33

   15 formal_list: formal_list . ',' formal
   18 formals: '(' formal_list . ')'

    ','  shift, and go to state 41
    ')'  shift, and go to state 42


State 34

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 35

   11 feature: OBJECTID formals ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 43


State 36

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 37

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 58


State 38

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 39

   19 formals: '(' error ')' .

    $default  reduce using rule 19 (formals)


State 40

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 59


State 41

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 31

    formal  go to state 60


State 42

   18 formals: '(' formal_list ')' .

    $default  reduce using rule 18 (formals)


State 43

   11 feature: OBJECTID formals ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 61


State 44

   40 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 62


State 45

   43 expr: LET . let

    error     shift, and go to state 63
    OBJECTID  shift, and go to state 64

    let  go to state 65


State 46

   41 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 66


State 47

   44 expr: CASE . expr OF branch_list ESAC

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 67


State 48

   45 expr: NEW . TYPEID

    TYPEID  shift, and go to state 68


State 49

   46 expr: ISVOID . expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 69


State 50

   59 expr: STR_CONST .

    $default  reduce using rule 59 (expr)


State 51

   58 expr: INT_CONST .

    $default  reduce using rule 58 (expr)


State 52

   60 expr: BOOL_CONST .

    $default  reduce using rule 60 (expr)


State 53

   33 expr: OBJECTID . ASSIGN expr
   38     | OBJECTID . '(' expr_list_1 ')'
   39     | OBJECTID . '(' ')'
   57     | OBJECTID .

    ASSIGN  shift, and go to state 70
    '('     shift, and go to state 71

    $default  reduce using rule 57 (expr)


State 54

   55 expr: NOT . expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 72


State 55

   51 expr: '~' . expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 73


State 56

   42 expr: '{' . expr_list_2 '}'
   61     | '{' . stmt_list '}'

    error       shift, and go to state 74
    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr_list_2  go to state 75
    expr         go to state 76
    stmt_list    go to state 77


State 57

   56 expr: '(' . expr ')'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 78


State 58

   13 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   34 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_1 ')'
   35     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr . '.' OBJECTID '(' expr_list_1 ')'
   37     | expr . '.' OBJECTID '(' ')'
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    LE   shift, and go to state 79
    '<'  shift, and go to state 80
    '='  shift, and go to state 81
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '@'  shift, and go to state 86
    '.'  shift, and go to state 87
    ';'  shift, and go to state 88


State 59

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 60

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 61

   11 feature: OBJECTID formals ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 89


State 62

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_1 ')'
   35     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr . '.' OBJECTID '(' expr_list_1 ')'
   37     | expr . '.' OBJECTID '(' ')'
   40     | IF expr . THEN expr ELSE expr FI
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    THEN  shift, and go to state 90
    LE    shift, and go to state 79
    '<'   shift, and go to state 80
    '='   shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '@'   shift, and go to state 86
    '.'   shift, and go to state 87


State 63

   24 let: error . ',' let

    ','  shift, and go to state 91


State 64

   20 let: OBJECTID . ':' TYPEID IN expr
   21    | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   22    | OBJECTID . ':' TYPEID ',' let
   23    | OBJECTID . ':' TYPEID ASSIGN expr ',' let

    ':'  shift, and go to state 92


State 65

   43 expr: LET let .

    $default  reduce using rule 43 (expr)


State 66

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_1 ')'
   35     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr . '.' OBJECTID '(' expr_list_1 ')'
   37     | expr . '.' OBJECTID '(' ')'
   41     | WHILE expr . LOOP expr POOL
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    LOOP  shift, and go to state 93
    LE    shift, and go to state 79
    '<'   shift, and go to state 80
    '='   shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '@'   shift, and go to state 86
    '.'   shift, and go to state 87


State 67

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_1 ')'
   35     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr . '.' OBJECTID '(' expr_list_1 ')'
   37     | expr . '.' OBJECTID '(' ')'
   44     | CASE expr . OF branch_list ESAC
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    OF   shift, and go to state 94
    LE   shift, and go to state 79
    '<'  shift, and go to state 80
    '='  shift, and go to state 81
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '@'  shift, and go to state 86
    '.'  shift, and go to state 87


State 68

   45 expr: NEW TYPEID .

    $default  reduce using rule 45 (expr)


State 69
